<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:stretchColumns="1">

    <TextView android:text="@string/lista_de_produtos" />

    <View
        android:layout_height="2dip"
        android:layout_margin="10dp"
        android:background="#FF909090" />

    <TableRow>

        <TextView android:text="@string/produto_a" />

        <TextView
            android:layout_gravity="right"
            android:text="@string/reais_100" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/produto_b" />

        <TextView
            android:layout_gravity="right"
            android:text="@string/reais_200" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/produto_c" />

        <TextView
            android:layout_gravity="right"
            android:text="@string/reais_300" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:layout_margin="10dp"
        android:background="#FF909090" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal" >

        <Button
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="35dip"
            android:text="@string/cancelar" />

        <Button
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="35dip"
            android:text="@string/comprar" />
    </LinearLayout>

</TableLayout>